[project]
name = "sample-uv"
version = "0.1.0"
description = "Sample project with UV dependency management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio-client>=1.10.1",
    "gradio[mcp]>=5.30.0",
    "huggingface-hub[mcp]>=0.32.0",
    "mcp[cli]>=1.11.0",
    "smolagents[mcp]>=1.20.0",
    "textblob>=0.19.0",
]
